make setup admin account to be created from docker-compose enviroment properties